# WebPulseChecker

./: .clang-format  .gitmodules  CMakeLists.txt
include/Entity/: AutoBackupManager.h  FileSize.h  NetworkChecker.h  Timer.h
src/: main.cpp
src/Entity/: AutoBackupManager.cpp  FileSize.cpp  NetworkChecker.cpp  Timer.cpp
